<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>space_nav2_bringup</name>
  <version>0.0.1</version>
  <description>Example bringup scripts for Navigation2 package running in SpaceROS</description>
  <maintainer email="fiderekblazej@gmail.com">Blazej Fiderek (xfiderek)</maintainer>
  <maintainer email="hansenmattk@gmail.com">Matt Hansen (mkhansenbot)</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
